adjust mappings
