# openapi.yaml
@@ -42,7 +42,7 @@ paths:
                     type: string
                     example: healthy
 
-  /api/v1/mappings:
+  /mappings:
     post:
       tags:
         - Mappings
@@ -103,7 +103,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/mappings/sys-id/{sys_id}:
+  /mappings/sys-id/{sys_id}:
     get:
       tags:
         - Mappings
@@ -139,7 +139,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/mappings/api-id/{api_id}:
+  /mappings/api-id/{api_id}:
     get:
       tags:
         - Mappings
@@ -175,7 +175,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/mappings/search:
+  /mappings/search:
     get:
       tags:
         - Mappings
@@ -225,7 +225,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
-  /api/v1/mappings/{id}:
+  /mappings/{id}:
     put:
       tags:
         - Mappings
